<resources>
    <string name="app_name">FAKE\nE-COMMERCE</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="mail">Email</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="location">Location</string>
    <string name="phone_number">Phone Number</string>
    <string name="register">REGISTER</string>
    <string name="locate_me">Locate\nMe!</string>
    <string name="to_login">Have you got an account already?\nClick here to Login.</string>
    <string name="to_login_highlighted_text">Click here to Login.</string>
    <string name="settings">SETTINGS</string>
    <string name="location_permission">Give Location Permission</string>
</resources>