<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.tsci.fake_ecommerce.features.register.RegisterViewModel" />
    </data>

    <!-- todo change imeoptions actiondone and make it single line -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:textSize="@dimen/textsize_32sp"
            android:layout_marginTop="?attr/actionBarSize"
            app:layout_constraintBottom_toTopOf="@id/tilUserName"
            android:layout_marginBottom="@dimen/margin_32dp"
            android:text="@string/app_name"
            android:gravity="center"
            app:layout_constraintVertical_chainStyle="packed"
            android:textColor="@color/glossy_grape"
            android:textStyle="italic|bold"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_height="wrap_content"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilUserName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_16dp"
            android:hint="@string/username"
            app:layout_constraintBottom_toTopOf="@id/tilMail"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etUserName"
                android:afterTextChanged="@{(text) -> viewModel.setUserName(text)}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilMail"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_16dp"
            android:hint="@string/mail"
            app:layout_constraintBottom_toTopOf="@id/tilPassword"
            app:layout_constraintTop_toBottomOf="@id/tilUserName">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etMail"
                android:afterTextChanged="@{(text) -> viewModel.setEmail(text)}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_16dp"
            android:hint="@string/password"
            app:layout_constraintBottom_toTopOf="@id/tilName"
            app:layout_constraintTop_toBottomOf="@id/tilMail"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:afterTextChanged="@{(text) -> viewModel.setPassword(text)}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_16dp"
            android:hint="@string/name"
            app:layout_constraintBottom_toTopOf="@id/tilSurname"
            app:layout_constraintTop_toBottomOf="@id/tilPassword">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etName"
                android:afterTextChanged="@{(text) -> viewModel.setName(text)}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilSurname"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/tilLocation"
            android:layout_marginHorizontal="@dimen/margin_16dp"
            android:hint="@string/surname"
            app:layout_constraintTop_toBottomOf="@id/tilName">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etSurname"
                android:afterTextChanged="@{(text) -> viewModel.setSurname(text)}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilLocation"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            app:layout_constraintEnd_toStartOf="@id/btnLocate"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/tilPhoneNumber"
            app:layout_constraintStart_toStartOf="@id/tilSurname"
            android:hint="@string/location"
            app:layout_constraintTop_toBottomOf="@id/tilSurname">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etLocation"
                android:layout_width="match_parent"
                android:focusable="false"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLocate"
            android:layout_marginStart="@dimen/margin_8dp"
            android:layout_width="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/locate_me"
            app:layout_constraintEnd_toEndOf="@id/tilUserName"
            app:layout_constraintTop_toTopOf="@id/tilLocation"
            app:layout_constraintStart_toEndOf="@id/tilLocation"
            android:layout_height="wrap_content"/>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPhoneNumber"
            app:layout_constraintBottom_toTopOf="@id/btnRegister"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_16dp"
            android:hint="@string/phone_number"
            app:layout_constraintTop_toBottomOf="@id/tilLocation">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPhoneNumber"
                android:afterTextChanged="@{(text) -> viewModel.setPhoneNumber(text)}"
                android:layout_width="match_parent"
                android:inputType="phone"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/margin_16dp"
            android:layout_marginHorizontal="16dp"
            android:text="@string/register"
            app:layout_constraintTop_toBottomOf="@id/tilPhoneNumber"
            android:layout_height="wrap_content"/>


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvToLogin"
            android:layout_width="match_parent"
            android:textSize="14sp"
            android:gravity="center"
            android:textColorHighlight="@color/magnolia"
            android:textColorLink="@color/soap"
            android:text="@string/to_login"
            android:padding="@dimen/padding_8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_height="wrap_content"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>